1) Newly added server/server group is not visible in the tree unless pgAdmin is refreshed. Fixes #6839 2) Internal server error displayed if disconnect the server. Fixes #6852

--- a/web/pgadmin/static/scss/_pgadmin4-tree.overrides.scss
+++ b/web/pgadmin/static/scss/_pgadmin4-tree.overrides.scss
@@ -54,7 +54,7 @@
         font-size: 18px;
         text-align: center;
         height: 21px !important;
-        width: 20px;
+        width: 20px !important;
         &:before {
             height: inherit;
             width: inherit;
